Fix scroll issue on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,15 @@
   padding: 0;
   font-family: "Pangolin", cursive;
 }
+html {
+  height: 100%;
+}
 body {
   background: url("./assets/background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 100vh;
+  height: 100%;
   background-attachment: fixed;
 }
 .card {
